--- a/DatingApp.API/appsettings.Development.json
+++ b/DatingApp.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=DatingApp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
