--- a/TimeSheetApp.API/appsettings.Development.json
+++ b/TimeSheetApp.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=localhost;Initial Catalog=TimeSheet;User ID=sa;Password=Go2hell1234"
+    "DefaultConnectionString": "Data Source=localhost;Initial Catalog=TimeSheet;User ID=********;Password=***********"
   },
   "Logging": {
     "LogLevel": {
